--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
+  font-weight: bold;
 }
 
 h1 {
@@ -22,21 +23,27 @@ font-weight: 900;
 .role{
   font-weight: normal;
   margin: 0;
+
+}
+.about-me{
+  font-weight: normal;
+  margin: 0;
+  color: #66BFBF;
+
 }
 h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5em;
-  font-weight: bold;
+  font-weight: 900;
     color: #66BFBF;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
   color: #11999E;
+  margin-top: 2em;
 }
-a{
-  color: #11999E;
-}
+
 
 .topContainer {
   position: relative;
@@ -54,14 +61,16 @@ a{
 
 }
 .skill-1{
-  height: 50%;
-  width: 55%;
-  border-radius: 100%;
+margin-right: 30px;
+width: 25%;
+
+  float: left;
 }
 .skill-2{
-  height: 50%;
-width: 55%;
-  border-radius: 100%;
+margin-left: 30px;
+width: 25%;
+float: right;
+
 }
 
 .cloud2 {
@@ -77,5 +86,41 @@ width: 55%;
 }
 .skill-row{
   width: 50%;
-margin: 0 auto 0 auto;
+margin: 100px auto;
+text-align: left;
+line-height: 2;
+}
+.btn:link, .btn:visited {
+  background-color: #11999E;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  border-radius: 25% 25%;
+  text-decoration: none;
+  display: inline-block;
+  margin-bottom: 3em;
+}
+
+.btn:hover, .btn:active {
+  background-color: #66BFBF;
+}
+.bottom-container{
+  padding: 4em;
+  background-color: #66BFBF;
+  margin-bottom: 0;
+}
+.footer-link{
+  text-decoration: none;
+padding-top: 30px;
+  margin: 20px 20px auto 20px;
+  color: #11999E;
+
+}
+.middle-container{
+  background-color: #f8f1f1;
+}
+.credits{
+  margin-top: 3em;
+  margin-bottom: 0;
+  color:white;
 }
