--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,14 @@ body {
   font-family: 'Merriweather', serif;
   font-weight: bold;
 }
+hr{
 
+  border-style: dotted none none none;
+    height: 0px;
+    width: 3%;
+    border-width:5px;
+    border-color: grey;
+}
 h1 {
   font-size: 5.625em;
   margin: 50px auto 0 auto;
@@ -31,6 +38,9 @@ font-weight: 900;
   color: #66BFBF;
 
 }
+.my-bio{
+  margin-bottom: 3em;
+}
 h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5em;
@@ -51,7 +61,7 @@ h3 {
 }
 
 .profile-picture{
-
+  margin-top: 5em;
     height: 40%;
     border-radius: 100%;
 
